--- a/package.json
+++ b/package.json
@@ -8,8 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "ant-design-vue": "^1.7.8",
+    "chart.js": "^3.5.1",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-chartjs": "^3.5.1",
+    "vue-clock2": "^1.1.5",
+    "vue-digital-clock": "^2.0.0",
+    "vue-moment": "^4.1.0",
+    "vue-router": "^3.5.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
