--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
   },
   "dependencies": {
     "ant-design-vue": "^1.7.8",
-    "chart.js": "^3.5.1",
+    "apexcharts": "^3.28.3",
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
-    "vue-chartjs": "^3.5.1",
+    "vue-apexcharts": "^1.6.2",
     "vue-clock2": "^1.1.5",
     "vue-digital-clock": "^2.0.0",
     "vue-moment": "^4.1.0",
+    "vue-resource": "^1.5.3",
     "vue-router": "^3.5.2"
   },
   "devDependencies": {
